blog/static/css/blog.css
.jumbotron {
    background-color: #BF9CB2;
    margin-top: 0;
    padding: 20px 20px 20px 20px;
}

h2 {
  font-family: 'Lobster', cursive;
  font-size: 30pt;
  color: black;
}

h3 {
    font-family: 'Lato', sans-serif;
}

h4 {
    font-family: 'Lato', sans-serif;
}

h5 {
    font-family: 'Lato', sans-serif;
}

p {
  font-family: 'Lato', sans-serif;
  font-size: 13pt;
}

a {
  font-family: 'Lato', sans-serif;
  font-size: 13pt;
}

#summary {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  max-width: 700px;
}

#contact {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#name {
  font-size: 40pt;
  font-family: 'Lobster', cursive;
}

#about-me {
  font-size: 16pt;
}

.linkedin:hover {
  transform: scale(1.1);
}

.linkedin {
  padding: 10px 15px 15px 15px;
}

.github:hover {
  transform: scale(1.1);
}

.github {
  padding: 10px 10px 10px 10px;
}

.section {
  padding: 10px 10px 10px 10px;
}

.section-content {
  padding: 10px 10px 10px 10px;
}

.card {
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: 20px;
  margin-right: 20px;
  font-size: 13pt;
  font-family: 'Lato', sans-serif;
}

#about-me-photo {
  max-width: 300px;
  padding: 0px 10px 10px 10px;
}

.btn {
  padding: 10px 10px 10px 10px;
  margin-left: 15px;
  margin-right: 15px;
  margin-top: 15px;
  margin-bottom: 100px;
  background-color: #BF9CB2;
  border-color: #BF9CB2;
}

#osu {
  padding: 15px 15px 15px 15px;
  background-color: #F4F5F6;
}

#end {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  justify-content:flex-end;
}

@media (min-width: 576px) {
    .card-columns {
        column-count: 1;
    }
}

@media (min-width: 768px) {
    .card-columns {
        column-count: 1;
    }
}

@media (min-width: 992px) {
    .card-columns {
        column-count: 3;
    }
}

